crux-mir/test/symb_eval/alloc/out_of_bounds.good
test out_of_bounds/<DISAMB>::crux_test[0]: FAILED

failures:

---- out_of_bounds/<DISAMB>::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/alloc/out_of_bounds.rs:12:9: 12:24: error: in out_of_bounds/<DISAMB>::crux_test[0]
[Crux]   no value at offset 12, in aggregate of size 10
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/alloc/out_of_bounds.rs:12:9: 12:24: error: in out_of_bounds/<DISAMB>::crux_test[0]
[Crux]   attempted to read empty mux tree

[Crux] Overall status: Invalid.
